[gd_scene load_steps=4 format=3 uid="uid://s50ks7itmvu6"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_g7wkk"]

[sub_resource type="SystemFont" id="SystemFont_pcvli"]

[sub_resource type="Theme" id="Theme_r6ekh"]
default_font = SubResource("SystemFont_pcvli")
default_font_size = 28

[node name="MainMenu" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.913725, 0.913725, 0.913725, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(280, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -86.5
offset_right = 140.0
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g7wkk")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_r6ekh")
text = "Play"

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_r6ekh")
text = "Load"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_r6ekh")
text = "Exit"

[connection signal="button_down" from="MarginContainer/VBoxContainer/PlayButton" to="MarginContainer" method="_on_play_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/LoadButton" to="MarginContainer" method="_on_load_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/ExitButton" to="MarginContainer" method="_on_exit_button_down"]
